phase 1 complete